--- a/picom.conf
+++ b/picom.conf
@@ -1,36 +1,27 @@
-#################################
-#          Animations           #
-#################################
-# requires https://github.com/jonaburg/picom
-# (These are also the default values)
-transition-length = 500
-transition-pow-x = 0.1
-transition-pow-y = 0.1
-transition-pow-w = 0.1
-transition-pow-h = 0.1
-size-transition = true
-
+animations=true;
 
 #################################
 #             Corners           #
 #################################
-# requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 5.0;
+# nix-env -iA nixos.xorg.xprop to install on NixOS
+# xprop in terminal to get window names
+# requires: https://github.com/sdhand/compton
+corner-radius = 10;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
-  "class_g = 'XTerm'",
-  #"class_g = 'cider'",
-  "class_g = 'Alacritty'",
+  "class_g = '.virt-manager-wrapped'",
+  "class_g = 'kitty'",
+  "class_g = 'Vivaldi-stable'",
   "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
-  "class_g = 'trayer'",
+  "class_g = 'Code'",
+  "class_g = 'qBittorrent'",
+  "class_g = 'Thunar'",
   #"class_g = 'firefox'",
-  "class_g = 'xmobar'",
-  "class_g = 'Virt-manager'"
+  #"class_g = 'Conky'"
 ];
-round-borders = 1;
+round-borders = 0;
 round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
 ];
@@ -38,39 +29,22 @@ round-borders-exclude = [
 #################################
 #             Shadows           #
 #################################
-
-
 # Enabled client-side shadows on windows. Note desktop windows
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
-#
-# shadow = false
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
-# shadow-radius = 12
-shadow-radius = 7;
+# shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-#shadow-opacity = .75
+# shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
-
-# Avoid drawing shadows on dock/panel windows. This option is deprecated,
-# you should use the *wintypes* option in your config file instead.
-#
-# no-dock-shadow = false
-
-# Don't draw shadows on drag-and-drop windows. This option is deprecated,
-# you should use the *wintypes* option in your config file instead.
-#
-# no-dnd-shadow = false
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -81,17 +55,6 @@ shadow-offset-y = -7;
 # Blue color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-blue = 0
 
-# Do not paint shadows on shaped windows. Note shaped windows
-# here means windows setting its shape through X Shape extension.
-# Those using ARGB background is beyond our control.
-# Deprecated, use
-#   shadow-exclude = 'bounding_shaped'
-# or
-#   shadow-exclude = 'bounding_shaped && !rounded_corners'
-# instead.
-#
-# shadow-ignore-shaped = ''
-
 # Specify a list of conditions of windows that should have no shadow.
 #
 # examples:
@@ -100,12 +63,14 @@ shadow-offset-y = -7;
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
+  "window_type = 'notification'",
   "class_g = 'Conky'",
-  "class_g = 'Notify-osd'",
+  "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'slop'",
   "class_g = 'Polybar'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",
+  "(class_g = 'Firefox' || class_g = 'firefox-default') && (window_type = 'utility' || window_type = 'popup_menu') && argb"
 ];
 
 # Specify a X geometry that describes the region in which shadow should not
@@ -123,7 +88,6 @@ shadow-exclude = [
 #           Fading              #
 #################################
 
-
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
@@ -131,19 +95,19 @@ fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.025;
+fade-in-step = 0.10;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.009;
+fade-out-step = 0.1;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-fade-delta = 7
+fade-delta = 10
 
 # Specify a list of conditions of windows that should not be faded.
 # don't need this, we disable fading for all normal windows with wintypes: {}
 fade-exclude = [
-  "class_g = 'slop'"   # maim
+  #"class_g = 'slop'"   # maim
 ]
 
 # Do not fade on window open/close.
@@ -156,45 +120,39 @@ fade-exclude = [
 #################################
 #   Transparency / Opacity      #
 #################################
-
-
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
 inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+#frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-menu-opacity = 0.5
-# menu-opacity is depreciated use dropdown-menu and popup-menu instead.
-
-#If using these 2 below change their values in line 510 & 511 aswell
-popup_menu = { opacity = 0.5; }
-dropdown_menu = { opacity = 0.5; }
-
+# menu-opacity = 1.0
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
-# inactive-opacity-override = true
-inactive-opacity-override = false;
+inactive-opacity-override = true;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.4
+# inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
 focus-exclude = [
+  "class_g = 'Polybar'",
   "class_g = 'Cairo-clock'",
   "class_g = 'Bar'",                    # lemonbar
-  "class_g = 'slop'"                    # maim
+  "class_g = 'slop'",                   # maim
+  "class_i = 'Toolkit'",                # Firefox PIP
+  "class_g = 'zoom'"                    # Zoom meetings
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
-# inactive-dim-fixed = 0.7
+# inactive-dim-fixed = 1.0
 
 # Specify a list of opacity rules, in the format `PERCENT:PATTERN`,
 # like `50:name *= "Firefox"`. picom-trans is recommended over this.
@@ -205,33 +163,30 @@ focus-exclude = [
 #
 # opacity-rule = []
 opacity-rule = [
+  #"100:window_type = 'normal'",  # Windows are slightly transparent
+  "90:window_type = 'dock'",   
   "80:class_g     = 'Bar'",             # lemonbar
-  "75:class_g     = 'Neohtop'",
-  "100:class_g    = 'Virt-manager'",
-  "80:class_g     = 'Org.gnome.Evolution'",
-  "60:class_g     = 'kitty'",
-  "75:class_g     = 'Alacritty'",
-  "50:class_g     = 'Polybar'",
-  "85:class_g     = 'pamac-manager'",
-  "80:class_g     = 'rog-control-center'",
-  "75:class_g     = 'Thunar'",
-  "90:class_g     = 'zen'",
-  "90:class_g     = 'floorp'",
-  "90:class_g     = 'Vivaldi-stable'",
-  "80:class_g     = 'Timeshift-gtk'",
-  "60:class_g     = 'rclone-browser'",
-  "75:class_g     = 'apple-music-for-linux'",
-  "75:class_g     = 'dmenu'",
-  "75:class_g     = 'Cider'",
-  "75:class_g     = 'qBittorrent'"
+  "95:class_g     = 'Neohtop'",
+  "95:class_g     = 'Org.gnome.Evolution'",
+  "95:class_g     = 'kitty' && focused",
+  "90:class_g     = 'kitty' && !focused",
+  "90:class_g     = 'dmenu'",
+  "95:class_g     = 'Thunar' && focused",
+  "75:class_g     = 'Thunar' && !focused",
+  "90:class_g     = 'Polybar'",
+  "90:class_g     = 'Xfce4-terminal'",
+  "100:class_g    = 'code'",
+  "100:class_g    = 'Vivaldi-stable'",
+  "95:class_g     = 'rclone-browser'",
+  "75:class_g     = 'dmenu_run'",
+  "95:class_g     = 'qBittorrent'",
+  "85:class_g     = 'rofi'",
 ];
 
 
 #################################
 #     Background-Blurring       #
 #################################
-
-
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method =
 # blur-size = 12
@@ -242,14 +197,14 @@ opacity-rule = [
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-blur-background = true;
+ blur-background = true;
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
-# blur-background
+#    blur-background
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-blur-background-frame = true;
+ blur-background-frame = false;
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
@@ -264,36 +219,41 @@ blur-background-frame = true;
 # blur-kern = "3x3box";
 
 blur: {
-  # requires: https://github.com/ibhagwan/picom
-  method = "kawase";
-  #method = "kernel";
-  strength = 7;
-  # deviation = 1.0;
-  # kernel = "11x11gaussian";
-  background = false;
-  background-frame = false;
-  background-fixed = false;
-  kern = "3x3box";
+  method = "kernel";  # Uses convolution-based blur
+  strength = 25;  # Adjust for a smoother effect (20 is fine, but 30 enhances clarity)
+  kernel = "3x3box";  # Recommended for softer edges without over-blurring
+  deviation = 40;  # Increased for better gradient smoothness
+  background = true;
+  background-frame = true;
+  background-fixed = true;
 }
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
-  #"window_type = 'dock'",
-  #"window_type = 'desktop'",
-  #"class_g = 'URxvt'",
-  #
-  # prevents picom from blurring the background
-  # when taking selection screenshot with `main`
-  # https://github.com/naelstrof/maim/issues/130
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "class_g = 'URxvt'",
   "class_g = 'slop'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",
+  "(class_g = 'Firefox' || class_g = 'firefox-default') && (window_type = 'utility' || window_type = 'popup_menu') && argb"
 ];
 
+#################################
+#          Animations           #
+#################################
+# requires https://github.com/jonaburg/picom
+# (These are also the default values)
+transition-length = 300
+transition-pow-x = 0.1
+transition-pow-y = 0.1
+transition-pow-w = 0.1
+transition-pow-h = 0.1
+size-transition = true
+;
 
 #################################
 #       General Settings        #
 #################################
-
 # Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
 # daemon = false
 
@@ -302,8 +262,6 @@ blur-background-exclude = [
 #
 experimental-backends = true;
 backend = "glx";
-#backend = "xrender";
-
 
 # Enable/disable VSync.
 # vsync = false
@@ -320,13 +278,13 @@ mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
 # mark-ovredir-focused = false
-mark-ovredir-focused = true;
+#mark-ovredir-focused = true; ; false for xmonad
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
 #
-detect-rounded-corners = false
-# detect-rounded-corners = true;
+# detect-rounded-corners = false
+detect-rounded-corners = true;
 
 # Detect '_NET_WM_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
@@ -337,11 +295,10 @@ detect-client-opacity = true;
 # Specify refresh rate of the screen. If not specified or 0, picom will
 # try detecting this with X RandR extension.
 #
-# refresh-rate = 60
 refresh-rate = 120
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to
-# boost performance. This should not be used with
+# boost performance. This should not be used with 
 #   vsync drm/opengl/opengl-oml
 # as they essentially does sw-opti's job already,
 # unless you wish to specify a lower refresh rate than the actual value.
@@ -352,7 +309,7 @@ refresh-rate = 120
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
 # provided that the WM supports it.
 #
-# use-ewmh-active-win = false
+use-ewmh-active-win = true
 
 # Unredirect all windows if a full-screen opaque window is detected,
 # to maximize performance for full-screen windows. Known to cause flickering
@@ -377,7 +334,6 @@ detect-transient = true
 # detect-transient is enabled, too.
 #
 # detect-client-leader = false
-detect-client-leader = true
 
 # Resize damaged region by a specific number of pixels.
 # A positive value enlarges it while a negative one shrinks it.
@@ -390,7 +346,7 @@ detect-client-leader = true
 # with a 5x5 one you use `--resize-damage 2`, and so on).
 # May or may not work with *--glx-no-stencil*. Shrinking doesn't function correctly.
 #
-# resize-damage = 1
+resize-damage = 1
 
 # Specify a list of conditions of windows that should be painted with inverted color.
 # Resource-hogging, and is not well tested.
@@ -402,23 +358,21 @@ detect-client-leader = true
 # practically happened) and may not work with blur-background.
 # My tests show a 15% performance boost. Recommended.
 #
-# glx-no-stencil = false
+glx-no-stencil = true
 
-# GLX backend: Avoid rebinding pixmap on window damage.
-# Probably could improve performance on rapid window content changes,
+# GLX backend: Avoid rebinding pixmap on window damage. 
+# Probably could improve performance on rapid window content changes, 
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
-# glx-no-rebind-pixmap = false
+glx-no-rebind-pixmap = true
 
-# Disable the use of damage information.
+# Disable the use of damage information. 
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
 # has actually changed. Potentially degrades the performance, but might fix some artifacts.
 # The opposing option is use-damage
 #
 # no-use-damage = false
-#use-damage = true (Causing Weird Black semi opaque rectangles when terminal is opened)
-#Changing use-damage to false fixes the problem
 use-damage = false
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw
@@ -508,13 +462,75 @@ log-level = "info";
 #     set, and doesn't want certain window to cause unnecessary screen redirection,
 #     you can set this to `true`.
 #
-wintypes:
-{
-  normal = { fade = false; shadow = false; }
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 0.5; }
-  dropdown_menu = { opacity = 0.5; }
-};
+wintypes: {
+  normal = { fade = false; shadow = false; };
 
+  menu = { 
+    blur-background = false; 
+    fade = true;  # Add fade for smooth transitions
+    opacity = 0.95; # Slightly reduce opacity for better contrast
+  };
+
+  tooltip = { 
+    fade = true; 
+    shadow = true; 
+    opacity = 0.75; 
+    focus = true; 
+    full-shadow = false; 
+    blur-background = true;  # Add background blur for better readability
+  };
+
+  dock = { 
+    blur-background = false; 
+    opacity = 0.95; 
+    shadow = false; # Remove shadow for cleaner UI
+  };
+
+  dnd = { 
+    shadow = false; 
+    opacity = 0.85; # Slight reduction for visibility improvement
+  };
+
+  popup_menu = { 
+    opacity = 0.75; 
+    full-shadow = true;
+    blur-background = true; # Add blur for better depth effect
+  };
+
+  dropdown_menu = { 
+    opacity = 0.75; 
+    full-shadow = true;
+    blur-background = true; # Same as popup menu, to match UI consistency
+  };
+
+  utility = { 
+    full-shadow = true;
+    fade = true; # Makes utility windows transition smoothly
+  };
+
+  toolbar = { 
+    full-shadow = true;
+    opacity = 0.92; # Slightly reduced opacity for better visibility
+  };
+
+  notification = { 
+    opacity = 1;
+    shadow = true; # Makes notifications more prominent
+    blur-background = true; # Helps notifications stand out visually
+  };
+}
+
+
+
+# fading = true
+# fade-delta = 5
+# detect-client-opacity = true
+# active-opacity = 0.5
+# inactive-dim = 0.20
+# inactive-opacity = 0.5
+# mark-wmwin-focused = true
+# mark-ovredir-focused = true
+# # for flashfocus to work with tabbed containers
+# opacity-rule = [
+#   "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+# ];
